--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -123,7 +123,18 @@ There are several more minor improvements as well:
 \layout Itemize
 
 New URL popup menu in the message viewer and "Open URL in new browser window"
- option.
+ option
+\layout Itemize
+
+
+\begin_inset Quotes eld
+\end_inset 
+
+Open with...
+\begin_inset Quotes erd
+\end_inset 
+
+ command for attachment context menu
 \layout Itemize
 
 A new option to automatically select the units for message size (KB/MB)
