almost no changes, rgenerated the CHM file

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,10 @@
       Please refer to the cvs update list archives for the detailed list of
       all changes.
 
-Release 0.63 'Saugus' June ???, 2001
+Release 0.64 '???' ???, 2001
+-------------------------------------------------------------------------------
+
+Release 0.63 'Saugus' June 14, 2001
 -------------------------------------------------------------------------------
 
 12.06.01 VZ: added possibility to sort on "To: " in folder view
