--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.64 '???' ???, 2001
 -------------------------------------------------------------------------------
 
+19.06.01 VZ: POP3 speedup: only retrieve headers, not entire messages
+
 Release 0.63 'Saugus' June 14, 2001
 -------------------------------------------------------------------------------
 
