--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.64 '???' ???, 2001
 -------------------------------------------------------------------------------
 
+28.06.01 VZ: automatically remove "mailto:" from addresses in composer
 19.06.01 XN: threading takes into account In-Reply-To, not only References
 19.06.01 VZ: POP3 speedup: only retrieve headers, not entire messages
 
