--- a/TODO
+++ b/TODO
@@ -8,6 +8,12 @@ $Id$
     just continue to remove bugs from this list as they are 
     fixed.
 
+************ HeaderInfo reorganization
+
+1. sorting/threading
+
+2. score/colour setting per message basis: grep for USE_HEADER_SCORE/COLOUR
+
 ************ bugs
 
 ************ optimize
