1. implemented server side sorting 2. added some support for gracefully handling lost connection (there is    much more to do left though) 3. use SortParams now everywhere, added Sorting.cpp implementing it 4. changed clicking on a column in the folder view and added an explanatory    message for it 5. optimized reversing the sort order 6. prefetch all messages when doing client side sort 7. allow partial msg sorting if the user interrupts header retrieval 8. show invalid (i.e. non retrieved) headers better in folder view

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@
 Release 0.64 '???' ???, 2001
 -------------------------------------------------------------------------------
 
+30.08.01 VZ: added support for server-side sorting
+30.08.01 VZ: handle connection loss more gracefully
 25.08.01 VZ: auto select the next unread msg/folder with one key press
 21.08.01 VZ: added address book interface to /etc/passwd (Unix only)
 21.08.01 VZ: better colour selector control in the options dialog
