--- a/locale/de.po
+++ b/locale/de.po
@@ -5791,7 +5791,7 @@ msgstr "ein Paßwort"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "Sie haben für diese Mailbox k%s angegeben, obwohl dies benötigt wird.\n"
 "\n"
