--- a/locale/es.po
+++ b/locale/es.po
@@ -6658,7 +6658,7 @@ msgstr "una clave"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "No ha especificado %s para esta carpeta, de todas formas requiere uno\n"
 "\n"
