--- a/locale/fr.po
+++ b/locale/fr.po
@@ -5973,7 +5973,7 @@ msgstr "le mot de passe"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "Vous n'avez pas entré %s pour ce répertoire, bien qu'il soit nécessaire.\n"
 "\n"
