--- a/locale/it.po
+++ b/locale/it.po
@@ -6916,7 +6916,7 @@ msgstr "una password"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "Non hai specificato %s per questa cartella, sebbene lo richieda.\n"
 "Altrimenti  puoi selezionare l'accesso anonimo\n"
