--- a/locale/nl.po
+++ b/locale/nl.po
@@ -6906,7 +6906,7 @@ msgstr "een wachtwoord"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "U heeft %s niet aangegeven voor deze map, hoewel dit wel nodig is.\n"
 "Als alternatief kunt u anonieme toegang selecteren.\n"
