--- a/locale/fi.po
+++ b/locale/fi.po
@@ -5913,7 +5913,7 @@ msgstr "salasana"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "Et ole m‰‰ritellyt %s t‰lle kansiolle, vaikka kansio vaatii sen.\n"
 "\n"
