--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -6066,7 +6066,7 @@ msgstr "uma senha"
 msgid ""
 "You have not specified %s for this folder, although it requires one.\n"
 "Alternatively, you might want to select anonymous access.\n"
-"Would you like to do change this now?"
+"Would you like to change this now?"
 msgstr ""
 "Você não especificou %s para esta pasta. Você deseja utilizar\n"
 "acesso anônimo?"
