--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.64 '???' ???, 2001
 -------------------------------------------------------------------------------
 
+12.09.01 VZ: added "open folder in read only mode" command
 05.09.01 VZ: added support for server side threading
 05.09.01 VZ: added threading item to folder view popup menu
 03.09.01 VZ: added preview delay option in folder view
