got rid of ProfileType settings, bumped up version to 0.64 because of incompatible change to the config file structure

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,7 @@
       Please refer to the cvs update list archives for the detailed list of
       all changes.
 
-Release 0.64 '???' ???, 2001
+Release 0.64 'Sparc' ???, 2001
 -------------------------------------------------------------------------------
 
 12.09.01 VZ: added "open folder in read only mode" command
