spelling and typo fix

--- a/locale/it.po
+++ b/locale/it.po
@@ -8301,7 +8301,7 @@ msgstr ""
 msgid ""
 "Mahogany may automatically remember all e-mail addresses in the messages "
 "you\n"
-"receive in a special addresss book. This is called 'address\n"
+"receive in a special address book. This is called 'address\n"
 "autocollection' and may be turned on or off from this page."
 msgstr ""
 "Mahogany può automaticamente ricordare gli indirizzi di posta dei messaggi "
@@ -13487,7 +13487,7 @@ msgstr "Vado in cerca della cartella"
 
 #~ msgid ""
 #~ "M may automatically remember all e-mail addresses in the messages you "
-#~ "receive in a special addresss book. This is called 'address "
+#~ "receive in a special address book. This is called 'address "
 #~ "autocollection' and may be turned on or off from this page"
 #~ msgstr ""
 #~ "M può memorizzare automaticamente tutti gli indirizzi nei messaggi che "
