--- a/locale/de.po
+++ b/locale/de.po
@@ -6957,7 +6957,7 @@ msgstr ""
 msgid ""
 "Mahogany may automatically remember all e-mail addresses in the messages "
 "you\n"
-"receive in a special addresss book. This is called 'address\n"
+"receive in a special address book. This is called 'address\n"
 "autocollection' and may be turned on or off from this page."
 msgstr ""
 "Mahogany kann automatisch alle E-Mail Adressen aus eingehenden Nachrichten\n"
