--- a/locale/fi.po
+++ b/locale/fi.po
@@ -7083,7 +7083,7 @@ msgstr ""
 msgid ""
 "Mahogany may automatically remember all e-mail addresses in the messages "
 "you\n"
-"receive in a special addresss book. This is called 'address\n"
+"receive in a special address book. This is called 'address\n"
 "autocollection' and may be turned on or off from this page."
 msgstr ""
 "Mahogany voi muistaa kaikki e-mail osoitteet viesteistä, jotka vastaanotat\n"
