--- a/locale/fr.po
+++ b/locale/fr.po
@@ -7147,7 +7147,7 @@ msgstr ""
 msgid ""
 "Mahogany may automatically remember all e-mail addresses in the messages "
 "you\n"
-"receive in a special addresss book. This is called 'address\n"
+"receive in a special address book. This is called 'address\n"
 "autocollection' and may be turned on or off from this page."
 msgstr ""
 "Mahogany peut recueillir automatiquement toutes les adresses électorniques\n"
