--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
 Release 0.64 'Sparc' ???, 2001
 -------------------------------------------------------------------------------
 
+17.11.01 VZ: SSL support for Win32 version
 16.11.01 VZ: added "Update" and "Update all" commands in the "Folder" menu
 15.11.01 VZ: added possibility to monitor the folders in the background
 14.11.01 VZ: apply filters faster by evaluating them all first
