--- a/doc/Manual.lyx
+++ b/doc/Manual.lyx
@@ -70,27 +70,146 @@ http://mahogany.sourceforge.net/
 \layout Chapter
 
 Using Mahogany 
+\layout Standard
+\added_space_top bigskip \align center 
+
+\series bold 
+\size large 
+Please note that the manual is signifcantly out of date
+\layout Standard
+\align center 
+
+\series bold 
+\size large 
+and may contain information which is not correct any more.
+\layout Standard
+\align center 
+\layout Standard
+\added_space_bottom bigskip \align center 
+
+\series bold 
+\size large 
+Any help with keeping it up to date would be very appreciated!
 \layout Section
 
 Release Notes_1001_
 \layout Standard
 
-This is another public release of Mahogany.
- As with usual we make the source available and binaries for the most common
- operating systems supported.
- Mahogany should generally work on any Unix flavour.
- 
-\layout Standard
-
-Due to the fact that it is a cross-platform effort, the compilation and
- make system are a bit more complex than the average package.
- However, the source code is provided and you can attempt to compile it
- yourself.
- If you are trying to port it to a new platform, let us know and we will
- be happy to help you.
+Welcome to the new Mahogany release! If you haven't installed the program
+ yet,you probably want to start by doing it.
+ Please check if we don't have prebuiltbinaries for your platform (currently
+ we only provide binaries for Linux andWin32).
+ If not, you'll have to build it from the sources: please refer to the README
+ file for the compilation instructions.
+ Mahogany should generally work on any modern Unix flavour but, of course,
+ you can alwats contact us if you have any problems with building it.
 \layout Subsection
 
 Changes against the previous version
+\layout Subsubsection
+
+0.64 against 0.63
+\layout Standard
+
+This time the most important changes have happened to the already existingfeatur
+es many of which were dramatically improved.
+ Support for both IMAP4 andPOP3 has got better, many UI improvements were
+ done and too many bugs to mentionthem here were fixed.
+\layout Standard
+
+The main change without doubt is the complete reorganisation of the programinter
+nals which now allows us to only download the headers shown on the screenfrom
+ server instead of getting all of them.
+ This means that the time needed toopen a folder is now almost independent
+ of the folder size and Mahogany can be used without troubles with folders
+ containing 50000 messages (and maybe more -but this wasn't tested yet).
+\layout Standard
+
+But what would be a new release without some new features? So here they
+ are:
+\layout Itemize
+
+Added optional support for viewing and printing the HTML messages.
+ Also added anoptional text-only viewer.
+\layout Itemize
+
+Added possibility to monitor a folder (or server) in the background justupdading
+ the number of messages in it but without actually downloading them.
+\layout Itemize
+
+IMAP server-side sorting and threading can now be used if available.
+ It is alsopossible to sort and thread messages simultaneously.
+ Both are now also done muchmore efficiently and more correctly.
+\layout Itemize
+
+Mahogany now remembers the flags for the POP3 servers and new mail detection
+ forthem works much more reliably which now makes Mahogany a much better
+ POP3 client(provided your server supports UIDL POP command).
+ POP3 code also tries to befaster by optionally using TOP instead of downloading
+ the entire messages.
+\layout Itemize
+
+Support for List-Post header and the possibility to configure the program
+ toautomatically reply to the mailing list only.
+\layout Itemize
+
+Added rename and copy buttons to the filter editing dialog.
+\layout Itemize
+
+Added "Open as readonly" command - this can be significantly faster than
+ "Open"for the local folders and also works for the read only files.
+\layout Itemize
+
+Added a command to permanently delete messages instead of moving them to
+ theTrash folder - useful for dealing with spam.
+\layout Itemize
+
+Filters were sped up even more.
+ They also show a nicer progress dialog now.
+\layout Itemize
+
+Added commands to manually update the status of one or all folders.
+\layout Itemize
+
+Also added commands to mark messages as read or unread.
+\layout Standard
+
+Some of the notable UI improvements are:
+\layout Itemize
+
+Quoting the original text when replying is now optional, you can also choose
+ toinclude only the text selected in the viewer in the reply.
+\layout Itemize
+
+Progress dialogs are shown while Mahogany is performing some long operations.The
+ existing progress dialogs shown while retrieving the message headers nowshow
+ the details of the messages being retrieved.
+\layout Itemize
+
+Password handling in case they are not stored in the config file has beenimprove
+d - Mahogany can now remember them for this session only instead ofkeeping
+ prompting for them.
+\layout Itemize
+
+Clicking on the header in the folder view window gives fast access to thesorting
+/threading menu with many useful items.
+\layout Itemize
+
+Scrolling beyond the end of the current messages (optionally) selects the
+ nextunread message or folder.
+\layout Itemize
+
+It is possible to rename the folder in the tree and the underlying folder
+ fileor mailbox independently of each other.
+\layout Standard
+
+The Win32 version has now some more of the possibilities of the Unix one:
+\layout Itemize
+
+SSL support is now available under Windows
+\layout Itemize
+
+Mahogany can play a sound on receiving a new mail (optionally, of course)
 \layout Subsubsection
 
 0.63 against 0.62
